WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221765
drawGlyphs() should take a Glyph* and an Advance* instead of a GlyphBuffer
https://bugs.webkit.org/show_bug.cgi?id=221765
Summary
drawGlyphs() should take a Glyph* and an Advance* instead of a GlyphBuffer
Myles C. Maxfield
Reported
2021-02-11 11:35:12 PST
drawGlyphs() should take a Glyph* and an Advance* instead of a GlyphBuffer
Attachments
Patch
(28.33 KB, patch)
2021-02-11 11:39 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(28.36 KB, patch)
2021-02-11 11:49 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(31.66 KB, patch)
2021-02-11 12:39 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(37.87 KB, patch)
2021-02-11 13:45 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(37.86 KB, patch)
2021-02-11 13:47 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(37.99 KB, patch)
2021-02-11 14:27 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(37.98 KB, patch)
2021-02-11 14:59 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(38.12 KB, patch)
2021-02-11 16:47 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(38.00 KB, patch)
2021-02-11 20:46 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(38.64 KB, patch)
2021-02-11 21:10 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(40.79 KB, patch)
2021-02-11 21:30 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(41.28 KB, patch)
2021-02-11 21:58 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(3.45 KB, patch)
2021-02-12 12:34 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(12)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-02-11 11:39:10 PST
Created
attachment 420015
[details]
Patch
Myles C. Maxfield
Comment 2
2021-02-11 11:49:11 PST
Created
attachment 420018
[details]
Patch
Myles C. Maxfield
Comment 3
2021-02-11 12:39:25 PST
Created
attachment 420030
[details]
Patch
Myles C. Maxfield
Comment 4
2021-02-11 13:45:07 PST
Created
attachment 420037
[details]
Patch
Myles C. Maxfield
Comment 5
2021-02-11 13:47:16 PST
Created
attachment 420039
[details]
Patch
Myles C. Maxfield
Comment 6
2021-02-11 14:27:04 PST
Created
attachment 420045
[details]
Patch for committing
Myles C. Maxfield
Comment 7
2021-02-11 14:59:01 PST
Created
attachment 420048
[details]
Patch for committing
Myles C. Maxfield
Comment 8
2021-02-11 16:47:22 PST
Created
attachment 420066
[details]
Patch for committing
Myles C. Maxfield
Comment 9
2021-02-11 20:46:25 PST
Created
attachment 420089
[details]
Patch for committing
Myles C. Maxfield
Comment 10
2021-02-11 21:10:14 PST
Created
attachment 420091
[details]
Patch for committing
Myles C. Maxfield
Comment 11
2021-02-11 21:30:45 PST
Created
attachment 420094
[details]
Patch for committing
Myles C. Maxfield
Comment 12
2021-02-11 21:58:43 PST
Created
attachment 420098
[details]
Patch for committing
EWS
Comment 13
2021-02-11 22:53:22 PST
Committed
r272772
: <
https://commits.webkit.org/r272772
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420098
[details]
.
Radar WebKit Bug Importer
Comment 14
2021-02-11 22:54:15 PST
<
rdar://problem/74265730
>
Aakash Jain
Comment 15
2021-02-12 09:17:20 PST
(In reply to EWS from
comment #13
)
> Committed
r272772
: <
https://commits.webkit.org/r272772
>
This seems to have broken windows build.
r272772
failed in
https://build.webkit.org/#/builders/67/builds/190
r272771
passed in
https://build.webkit.org/#/builders/67/builds/189
Myles C. Maxfield
Comment 16
2021-02-12 09:29:25 PST
> Source\WebCore\platform/graphics/Font.cpp(34,10): fatal error C1083: Cannot open include file: 'pal/spi/cf/CoreTextSPI.h': No such file or directory
🤔 It's surprising that this doesn't work on Windows...
Myles C. Maxfield
Comment 17
2021-02-12 09:34:40 PST
Committed
234019@main
: <
https://commits.webkit.org/234019@main
>
Aakash Jain
Comment 18
2021-02-12 11:32:15 PST
Still failing, e.g.:
https://build.webkit.org/#/builders/56/builds/87
Myles C. Maxfield
Comment 19
2021-02-12 12:34:14 PST
Reopening to attach new patch.
Myles C. Maxfield
Comment 20
2021-02-12 12:34:16 PST
Created
attachment 420166
[details]
Patch
EWS
Comment 21
2021-02-12 13:49:22 PST
Committed
r272807
: <
https://commits.webkit.org/r272807
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420166
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug