Fix Windows build after r272772 https://bugs.webkit.org/show_bug.cgi?id=221765

Unreviewed.

No new tests because there is no behavior change.

* platform/graphics/Font.cpp:

Canonical link: https://commits.webkit.org/234019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272783 268f45cc-cd09-0410-ab3c-d52691b4dbfc